[project]
name = "uncond-zero-for-comfyui"
description = "Allows to sample without generating any uncond with Stable Diffusion!"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/Extraltodeus/Uncond-Zero-for-ComfyUI"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "extraltodeus"
DisplayName = "Uncond-Zero-for-ComfyUI"
Icon = ""
